migration to java 21