@@ -10,10 +10,10 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.release>17</maven.compiler.release>
-        <lombok.version>1.18.26</lombok.version>
-        <log4j.version>2.20.0</log4j.version>
-        <sqlite.version>3.41.2.2</sqlite.version>
+        <maven.compiler.release>21</maven.compiler.release>
+        <lombok.version>1.18.32</lombok.version>
+        <log4j.version>2.23.1</log4j.version>
+        <sqlite.version>3.45.2.0</sqlite.version>
     </properties>
 
     <dependencies>
@@ -40,17 +40,17 @@
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.10.1</version>
+                <version>3.13.0</version>
                 <configuration>
                     <compilerArgs>
-                        <arg>--enable-preview</arg>
+                        <arg>-parameters</arg>
                         <arg>-Xlint:unchecked</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <version>3.4.2</version>
+                <version>3.7.1</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
